[gd_scene load_steps=3 format=3 uid="uid://4jxq0osq376r"]

[ext_resource type="Script" path="res://Prog122h.gd" id="1_kc6fd"]

[sub_resource type="Theme" id="Theme_i1j4g"]
default_font_size = 30

[node name="Prog122h" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kc6fd")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 462.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 498.0
offset_right = 230.0
offset_bottom = 616.0
theme = SubResource("Theme_i1j4g")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 494.0
offset_right = 648.0
offset_bottom = 612.0
theme = SubResource("Theme_i1j4g")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 826.0
offset_top = 491.0
offset_right = 1029.0
offset_bottom = 609.0
theme = SubResource("Theme_i1j4g")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
